# crux

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: tests.yml
crates/crux-build/: Cargo.toml
crates/crux-build/src/: lib.rs
crates/crux-macros/: Cargo.toml
crates/crux-macros-impl/: Cargo.toml
crates/crux-macros-impl/src/: lib.rs
crates/crux-macros/src/: lib.rs
crates/crux-rust-ast/: Cargo.toml  README.md
crates/crux-rust-ast/src/: ast.rs  lib.rs
docs/: platforms.md  setup-no-std.md
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/logging/: Cargo.toml  build.rs
examples/logging/src/: main.rs
examples/std-compat/: Cargo.toml  build.rs
examples/std-compat/src/: main.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
link-scripts/: bench.ld  bin.ld  cdylib.ld  default.ld  example.ld  test-workaround.ld  test.ld
src/: concurrency.rs  crypto.rs  data_structures.rs  ffi.rs  lang.rs  lib.rs  logging.rs  mem.rs  num.rs  os.rs  rt.rs  runtime.rs  term.rs  test.rs  ui.rs
src/data_structures/: graph.rs  sized_vec.rs
src/lang/: reflect.rs
src/os/: fs.rs  mem.rs  proc.rs  unix.rs
src/rt/: backtrace.rs  entrypoint.rs  hook.rs  mem.rs  os.rs  proc.rs
src/rt/os/: unix.rs
src/term/: cli.rs
src/ui/: display.rs
src/ui/display/: wayland.rs
src/ui/display/wayland/: interfaces.rs  wire.rs
tests/: Cargo.toml
tests/src/: lib.rs
