[package]
name = "crux"
version = "0.1.0"
edition = "2024"
links = "crux"



#
# WORKSPACE SETTINGS
#



[workspace]
members = [
	"crates/crux-build",
	"crates/crux-macros",
	"crates/crux-macros-impl",
	"crates/crux-rust-ast",
	"examples/cli",
	"examples/logging",
	"examples/std-compat",
	"examples/testing",
	"tests",
]
[workspace.dependencies]
crux.path = "."
crux-macros.path = "crates/crux-macros"
crux-build.path = "crates/crux-build"
crux-rust-ast.path = "crates/crux-rust-ast"



#
# CRUX CRATE SETTINGS
#



[lib]
harness = false

[dependencies]
hashbrown = { version = "0.16", default-features = false, features = [
	"default-hasher",
	"inline-more",
	"nightly",
] }
crux-macros.workspace = true
sha2-const = "=0.1.2"

[build-dependencies]
crux-build.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
# libc constants can change from platform to platform, so instead of trying to
# track those ourselves we let the Rust team handle it
libc = { version = "0", default-features = false, features = [] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[profile.dev-unwind]
inherits = "dev"
panic = "unwind"
[profile.release-unwind]
inherits = "release"
panic = "unwind"



#
# CRUX FEATURE FLAGS & DOCUMENTATION
#



[features]
default = [
	"global-os-allocator",
	"logging-panic-handler",
	"logging",
	"term",
	"concurrency",
	"test-harness",
	"main",
]
# Registers crux::os::mem::OsAllocator as the global allocator.
global-os-allocator = []
# Provides a default panic handler, which simply logs the panic as a fatal log,
# then exits the process (on supported OSes), or spin-loops (on unsupported
# OSes).
logging-panic-handler = ["logging"]
# Enables additional memory safety checks in various unsafe functions. These
# could be nice to have while developing with Crux, but you probably want to
# disable this flag in production for a bit of extra performance.
safety-checks = []
# Enables logging functionality.
logging = []
# Enables the `term` module.
term = []
# Enables the `ui` module (crux's built-in windowing & ui library).
ui = []
# Enables the `concurrency` module.
concurrency = []
# Provides a testing harness for `cargo t` when compiled in test mode.
test-harness = []
# Lets crates define a `crux_main` function that gets executed at startup.
main = []
# Lets Crux crates also work with Rust's standard library, and lets you use a
# main function as normal (instead of needing to define a `crux_main` function).
std-compat = []
